@startuml
!theme plain
left to right direction
hide circle
skinparam shadowing false
skinparam defaultFontName Arial
skinparam linetype ortho
skinparam classAttributeIconSize 0
skinparam ArrowColor #555555

title Identity, Wallet and Promotion ERD

entity "users" as users {
  * id : uuid <<PK>>
  --
  email : varchar
  password : varchar
  full_name : varchar
  role : varchar
}

entity "profiles" as profiles {
  * id : uuid <<PK>>
  --
  account_id : uuid <<FK>>
  display_name : varchar
  target_level : varchar
}

entity "refresh_tokens" as refresh_tokens {
  * id : uuid <<PK>>
  --
  user_id : uuid <<FK>>
  token_hash : varchar
  expires_at : timestamp
}

entity "profile_onboarding_responses" as onboarding {
  * id : uuid <<PK>>
  --
  profile_id : uuid <<FK>>
  answers : jsonb
  version : int
}

entity "coin_transactions" as coin_transactions {
  * id : uuid <<PK>>
  --
  profile_id : uuid <<FK>>
  amount : int
  type : varchar
  reference_type : varchar
  reference_id : uuid
}

entity "wallet_topup_orders" as topup_orders {
  * id : uuid <<PK>>
  --
  profile_id : uuid <<FK>>
  package_id : uuid <<FK>>
  order_code : bigint
  payment_url : text
  status : varchar
}

entity "promo_codes" as promo_codes {
  * id : uuid <<PK>>
  --
  code : varchar
  reward_coins : int
  starts_at : timestamp
  expires_at : timestamp
}

entity "promo_code_redemptions" as promo_redemptions {
  * id : uuid <<PK>>
  --
  promo_code_id : uuid <<FK>>
  profile_id : uuid <<FK>>
  redeemed_at : timestamp
}

users ||--o{ profiles
users ||--o{ refresh_tokens
profiles ||--o{ onboarding
profiles ||--o{ coin_transactions
profiles ||--o{ topup_orders
profiles ||--o{ promo_redemptions
promo_codes ||--o{ promo_redemptions

@enduml
